@@ -1,3 +1,8 @@
+2012-05-16  Andrew Pinski  <apinski@cavium.com>
+
+	* gimple-fold.c (get_maxval_strlen): Move COND_EXPR handling under
+	GIMPLE_ASSIGN.
+
 2012-05-16  David S. Miller  <davem@davemloft.net>
 
 	* jump.c (delete_related_insns): If we remove a CALL, make sure
